# FantasyX

./: .env.example  .gitignore  .vercelignore  ACCESSIBILITY.md  ARCHITECTURE_REVIEW.md  Anchor.toml  CHANGELOG.md  CLAUDE.md  CURRENT_STATE.md  DEPLOYMENT.md  DEVELOPMENT_STANDARDS.md  FX008-HANDOFF.md  FX009-HANDOFF.md  FX009.5-HANDOFF.md  FX010-HANDOFF.md  FX011-HANDOFF.md  FX012-HANDOFF.md  FX013-HANDOFF.md  FX014-HANDOFF.md  FX015-HANDOFF.md  FX016-HANDOFF.md  FX016.5-HANDOFF.md  FX017-HANDOFF.md  FX019-HANDOFF.md  FX020-HANDOFF.md  FX021-HANDOFF.md  FX022-HANDOFF.md  FX023-HANDOFF.md  FX023-PRICING-RESEARCH.md  FX024.5-HANDOFF.md  FX025-HANDOFF.md  FX026-HANDOFF.md  HANDOFF.md  IMPLEMENTATION_REPORT.md  KNOWN_ISSUES.md  LIVE_DATA.md  PRODUCTION_AUDIT.md  PRODUCT_MOAT.md  PRODUCT_REQUIREMENTS_DOCUMENT.md  PRODUCT_ROADMAP.md  (+18 more)
.claude/: launch.json
app/: globals.css  layout.tsx  page.tsx
components/: account-bar.tsx  amm-order-book.tsx  analytics-charts.tsx  analytics-dashboard.tsx  auth-required-state.tsx  bottom-nav.tsx  fantasy-intelligence-panel.tsx  first-trade-coach.tsx  market-card.tsx  market-scanner.tsx  market-timeline.tsx  page-heading.tsx  player-market-chart.tsx  player-market-controls.tsx  position-tabs.tsx  pwa-shell.tsx  share-market-button.tsx  site-nav.tsx  threshold-tabs.tsx  trade-launcher.tsx  trade-modal.tsx  trade-panel.tsx
desktop/: main.cjs  package-lock.json  package.json
docs/: PROTOCOL_SPRINT_2_DESIGN.md  SOLANA_FOUNDATION.md
hooks/: use-live-exchange.ts
programs/fantasyx_market/: Cargo.toml
programs/fantasyx_market/src/: lib.rs
(+243 files in other folders)
