[package]
name = "fantasyx_market"
version = "0.1.0"
description = "FantasyX Solana market foundation program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "fantasyx_market"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
default = []

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"
